--- a/index.html
+++ b/index.html
@@ -10,4 +10,11 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
+  <form name="inax-contact-form" netlify netlify-honeypot="bot-field" hidden>
+    <input type="text" name="full-name" />
+    <input type="email" name="email" />
+    <input type="tel" name="phone" />
+    <input type="text" name="subject" />
+    <textarea name="message"></textarea>
+  </form>
 </html>
