--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>client</title>
+    <title>i-NAX</title>
+    <link rel="icon" type="image/png" href="/himages/newlogo1.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/logo-removebg-preview.png" />
   </head>
   <body>
     <div id="root"></div>
